# VocaliI_Interface_backend

./: .dockerignore  .gitignore  Dockerfile  alembic.ini  docker.compose.yaml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 22f3f34c43de_initial_migration.py  9b69764ead02_add_new_audio_models.py
vocali_backend/: .env  .env.example  auth_utils.py  database.py  email_service.py  main.py  models.py  routes.py  schemas.py
vocali_backend/routes/: audio.py  auth.py
vocali_backend/services/: email_service.py
vocali_backend/templates/: confirmation.html  reset_password.html
